--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ verify_ssl = true
 [packages]
 django = "~=3.1"
 python-dotenv = "~=0.14"
+psycopg2 = "~=2.8"
+django-heroku = "~=0.3"
+gunicorn = "~=20.0"
 
 [requires]
 python_version = "3.8"
