--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,27 @@
 version: '3.8'
 
 services:
-  seamless:
+  db:
+    container_name: seamless_postgres
+    image: postgres:12-alpine
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+
+  django:
     container_name: seamless_django
     image: seamless_django
     build: .
-    command: pipenv run python manage.py runserver 0.0.0.0:7000
+    command: pipenv run gunicorn seamless.wsgi:application --bind 0.0.0.0:7000
     volumes:
       - .:/seamless
     ports:
       - "7000:7000"
+    depends_on:
+      - db
+
+volumes:
+  postgres_data:
